improving code format after running html w3 schools validation

--- a/index.html
+++ b/index.html
@@ -17,24 +17,27 @@
       <hr class="transitionbar">
       <main>
       	<section class="banner">
-      		<article>
-        		<img src="img/coding_stock.jpg" class="banner-background" alt="coding-image">
-            <p class="bannerinfo">It is important to focus on the task required.  Additionally, balance is the key to a successful integration of work and pleasure.</p>
+          <h2>Work, Live, Balance</h2>
+      		<article class="item">
+            <h3>Language is important</h3>
+            <p class="bannerinfo">As we grow we develop the use of language to communicate both verbally and visually.  Consider how continuing to develop your language skills will benefit your ability to communicate through life.</p>
+            <img src="img/coding_stock.jpg" class="banner-background" alt="coding-image">
+          </article>
         </section>
         <hr class="transitionbar">
         <section class="featured">
-          <h2 class="header">Featured Work</h2>
+          <h3 class="header">Featured Work</h3>
           <article class="item">
             <img class="image" src="img/imac-stock.jpg" alt="computing-image">
-            <h3 class="title">Developer</h3>
+            <h4 class="title">Developer</h4>
           </article>
           <article class="item">
             <img class="image" src="img/gardening_stock.jpg" alt="gardening-image">
-            <h3 class="title">Gardener</h3>
+            <h4 class="title">Gardener</h4>
           </article>
           <article class="item">
             <img class="image" src="img/vegan1.jpg" alt="vegan-image">
-            <h3 class="title">Vegan</h3>
+            <h4 class="title">Vegan</h4>
           </article>
         </section>
       </main>
