updating wording and id usage

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <hr class="transitionbar">
       <main>
       	<section class="banner">
-          <h2>Work, Live, Balance</h2>
+          <h2 class="title">Work, Learn, Balance</h2>
       		<article class="item">
-            <h3>Language is important</h3>
+            <h3 class="header">Language is important</h3>
             <p class="bannerinfo">As we grow we develop the use of language to communicate both verbally and visually.  Consider how continuing to develop your language skills will benefit your ability to communicate through life.</p>
             <img src="img/coding_stock.jpg" class="banner-background" alt="coding-image">
           </article>
